# AdventOfCode

./: .gitignore  CMakeLists.txt  CMakePresets.json
2023/Day1/: CMakeLists.txt
2023/Day1/src/: main.cpp
2023/Day1part2/: CMakeLists.txt
2023/Day1part2/src/: main.cpp
2023/Day2/: CMakeLists.txt
2023/Day2/src/: main.cpp
2023/Day2part2/: CMakeLists.txt
2023/Day2part2/src/: main.cpp
2023/Day3/src/: main.cpp
2023/Day3part2/: output.txt
2023/Day3part2/src/: main.cpp  main.h
2023/Day4/src/: main.cpp
2023/Day4part2/: test.txt
2023/Day4part2/src/: main.cpp
2023/Day5/src/: main.cpp
2023/Day5part2/src/: main.cpp
2023/Day6/src/: main.cpp
2023/Day6part2/: CMakeLists.txt
2023/Day6part2/src/: main.cpp
2023/Template/: test.txt
2023/Template/src/: main.cpp
2024/: CMakeLists.txt
2024/Day1/: CMakeLists.txt
2024/Day1/src/: main.cpp
2024/Day1Part2/: CMakeLists.txt
2024/Day1Part2/src/: main.cpp
2024/Day2/: CMakeLists.txt
2024/Day2/src/: main.cpp
2024/Day2Part2/: CMakeLists.txt
2024/Day2Part2/src/: main.cpp
2024/Day3/: CMakeLists.txt
2024/Day3/src/: main.cpp
2024/Template/: CMakeLists.txt
2024/Template/src/: main.cpp
Utilities/: Utility.h
Utilities/private/: UtilityCache.h  UtilityParse.h
